--- a/1_business.html
+++ b/1_business.html
@@ -18,17 +18,17 @@
              <div class="col-md-3"> </div>
              <div class="col-md-6"><img src="./images/back_03.png" class="biao"></div>
              <div class="col-md-3"> </div>
-        
+
          </div>
         <div class="row" id="ywbk">
-            <div class="col-md-4"> 
-            <a href="1_1_tdc.html"> <img src="./images/biz_tdc_btn.png"> <p>引领铁路现代物流</p> </a>
+            <div class="col-md-4">
+            <a href="1_1_tdc.html" > <img src="./images/biz_tdc_btn.png" class="sb"> <p>引领铁路现代物流</p> </a>
             </div>
-            <div class="col-md-4"> 
-            <a href="1_1_tss.html"> <img src="./images/biz_tre_btn.png"><p>打造铁路特色服务</p> </a>
+            <div class="col-md-4">
+            <a href="1_1_tss.html"> <img src="./images/biz_tre_btn.png" class="sb"><p>打造铁路特色服务</p> </a>
              </div>
-            <div class="col-md-4"> 
-            <a href="1_1_tre.html"> <img src="./images/biz_tss_btn.png"> <p>开创铁路地产先锋</p></a>
+            <div class="col-md-4">
+            <a href="1_1_tre.html"> <img src="./images/biz_tss_btn.png" class="sb"> <p>开创铁路地产先锋</p></a>
              </div>
         </div>
 
@@ -36,16 +36,14 @@
     </div>
 	<nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
 	  <div class="container">
-		<div class="row " id="back1" >
-			<div class="col-md-10"></div>
-            
-            <div class="col-md-1">
-            <a class="back_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> <img src="./images/back_07.png"> </a>
-             </div>
-             <div class="col-md-1">
-            <a  href="index.html"> <img src="./images/back_09.png" > </a>
-            </div>
+		<div class="row " >
+			<div class="col-md-3"></div>
+      <div class="col-md-9">
+        <div class="pull-right">
+        <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
+        <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
         </div>
+      </div>
 	  </div>
 	</nav>
   </div>
