--- a/tdc_1.html
+++ b/tdc_1.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CefSharp Example Start Page</title>
+    <title>大连城市物流共同配送中心</title>
     <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
     <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
@@ -24,11 +24,11 @@
 				<div class="col-md-4"></div>
 			</div>
         </div>
-		
+
         <div class="main">
  			<div class="main-content">
-		
-			  <div class="row" id="wlsp"> 
+
+			  <div class="row" id="wlsp">
 				<div class="col-md-3 leftpart">
 					<div class="titlepart">
 					   <h3>大连城市物流<br/>共同配送中心</h3>
@@ -40,19 +40,15 @@
 						   位于大连市甘井子区华北路300号，占地面积13.3万平方米，包括2座常温库、1座低温库、1座超低温库、1座综合楼；两条铁路专用线通过月台与库房链接；配备24小时通行的常低温配送车辆28台及先进的装卸分拣设备100余台；配套综合办公、金融融资以及完善的物流管理信息系统。依托铁路优势开通了“大连—哈尔滨”“铁越号”冷链物流班列，打造“干线+城配”完整物流链条。与大连港合作申报，获批交通运输部首批“多式联运示范工程项目”。中心以“功能最全、服务最好、信誉最佳、管理最优、效率最高”为目标，融入区域经济、服务百姓消费、降低物流成本，竭诚为合作企业提供精品服务。
 
 					   </p>
-					   <div class="col-md-3 leftpart" style="height: 80px;    height: 80px;width: 100%!important;position: relative;padding: 0px;">
-					 <a class="play-video-btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-					 <img src="./images/sp_07.png">
-					 </a>
-					 </div>
+
 				   </div>
-				   
+
 				</div>
 				<div class="col-md-9 rightpart" >
 					<div class="titlepart">
 					</div>
 				   <div id="image_list" class=" bodypart">
-						<div class="grid" style="display:none;">						
+						<div class="grid" style="display:none;">
 						  <a href="images/sp_03.png" data-lightbox="lightbox" > <img  src="images/sp_03.png"> </a>
 						</div>
 						<div class="swiper swiper-container">
@@ -62,8 +58,8 @@
 							</div>
 						</div>
 				   </div>
-				</div>     
-	
+				</div>
+
 			  </div>
 			</div>
 	    </div>
@@ -71,22 +67,25 @@
 		  <div class="content">
                <div class="col-md-3 leftpart">
 			     <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-					视频播放
+             <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+             <span>		视频 </span>
 				 </a>
 			  </div>
-				
+
               <div class="col-md-9 rightpart" >
 				<div class="pull-right">
-				<a class="back-btn " href="javascript:void(0)" onclick="javascript:window.history.back();"> </a>
-				<a class="back-home-btn" href="index.html">   </a>
-				<a class="play-audio-btn audio-off" href="javascript:void(0)"></a>
-				<audio id="audio-js" src="Audios/sample.mp3" class="audio-js"></audio>
+				<a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
+				<a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
+				<a class="play-audio-btn audio-off ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-off" aria-hidden="true"></span> </a>
+				<audio id="audio-js" autoplay="true" class="audio-js">
+          <source src="audios/male/tdc_1.mp3" type="audio/mpeg">
+        </audio>
 				</div>
 			  </div>
  		  </div>
 		</nav>
 
-	
+
 	<!-- Modal -->
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 	  <div class="modal-dialog" role="document">
@@ -99,7 +98,7 @@
 			  <source src="Videos/sample.mp4" type="video/mp4">
 			</video>
 		  </div>
-		 
+
 		</div>
 	  </div>
 	</div>
