--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
              <div class="col-md-3"> </div>
              <div class="col-md-6"><img src="./images/logo.png" class="biao"></div>
              <div class="col-md-3"> </div>
-        
+
          </div>
 
         <div class="row" id="fenlei">
-            <div class="col-md-3"> 
-            <a href="1_business.html"> <img src="./images/btn_business.png"> </a>
+            <div class="col-md-3">
+            <a href="1_business.html" class="sb"> <img src="./images/btn_business.png"> </a>
             </div>
-            <div class="col-md-3"> 
-            <a href="1_profile.html"> <img src="./images/btn_culture.png"> </a>
+            <div class="col-md-3">
+            <a href="1_profile.html" class="sb"> <img src="./images/btn_culture.png"> </a>
             </div>
-            <div class="col-md-3"> 
-            <a href="1_party.html"> <img src="./images/btn_party.png"></a>
+            <div class="col-md-3">
+            <a href="1_party.html" class="sb"> <img src="./images/btn_party.png"></a>
             </div>
-            <div class="col-md-3"> 
-            <a href="1_culture.html"> <img src="./images/btn_profile.png"> </a>
+            <div class="col-md-3">
+            <a href="1_culture.html" class="sb"> <img src="./images/btn_profile.png"> </a>
             </div>
         </div>
 
-        <!-- <div> 
+        <!-- <div>
             <a href="index.html"> 首页 </a>
             <a class="back_btn" onclick="javascript:window.history.back();"> 返回 </a>
 
