--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 
         <div class="row" id="fenlei">
             <div class="col-md-3">
-            <a href="1_business.html" class="sb"> <img src="./images/btn_business.png"> </a>
+              <a href="1_business.html" class="sb business_btn">  </a>
             </div>
             <div class="col-md-3">
-            <a href="1_profile.html" class="sb"> <img src="./images/btn_culture.png"> </a>
+              <a href="1_profile.html" class="sb culture_btn">  </a>
             </div>
             <div class="col-md-3">
-            <a href="1_party.html" class="sb"> <img src="./images/btn_party.png"></a>
+              <a href="1_party.html" class="sb party_btn"> </a>
             </div>
             <div class="col-md-3">
-            <a href="1_culture.html" class="sb"> <img src="./images/btn_profile.png"> </a>
+              <a href="1_culture.html" class="sb profile_btn ">  </a>
             </div>
         </div>
 
