--- a/splash.html
+++ b/splash.html
@@ -15,6 +15,7 @@
 	  <a href="index.html">
 	  <video class="video-js" data-setup='{"controls": false, "autoplay": true, "preload": "auto", "fluid": true}'>
 				  <source src="Videos/sample.mp4" type="video/mp4">
+          <source src="videos/sample.webm" type="video/webm"/>
 	  </video>
 	  </a>
   </div>
