--- a/tdc_1.html
+++ b/tdc_1.html
@@ -1,115 +1,139 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>大连城市物流共同配送中心</title>
-    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>大连城市物流共同配送中心</title>
+  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
+  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
+  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
+  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+  <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
+  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div class="page  tdc-detail">
-        <div class="container">
-			<div class="logo"> <img src="./images/tdc_logo.png"> </div>
-			<div class="row" id="zlogo">
-				<div class="col-md-4"></div>
-				<div class="col-md-4"><img src="./images/tdc_head.png"></div>
-				<div class="col-md-4"></div>
-			</div>
+  <div class="page  tdc-detail">
+    <div class="container">
+      <div class="logo"> <img src="./images/tdc_logo.png"> </div>
+      <div class="row" id="zlogo">
+        <div class="col-md-4"></div>
+        <div class="col-md-4"><img src="./images/tdc_head.png"></div>
+        <div class="col-md-4"></div>
+      </div>
+    </div>
+
+    <div class="main">
+      <div class="main-content">
+
+        <div class="row" id="wlsp">
+          <div class="col-md-3 leftpart">
+            <div class="titlepart">
+              <h3>大连城市物流<br/>共同配送中心</h3>
+              <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
+            </div>
+
+            <div class=" bodypart">
+              <p>
+                位于大连市甘井子区华北路300号，占地面积13.3万平方米，包括2座常温库、1座低温库、1座超低温库、1座综合楼；两条铁路专用线通过月台与库房链接；配备24小时通行的常低温配送车辆28台及先进的装卸分拣设备100余台；配套综合办公、金融融资以及完善的物流管理信息系统。依托铁路优势开通了“大连—哈尔滨”“铁越号”冷链物流班列，打造“干线+城配”完整物流链条。与大连港合作申报，获批交通运输部首批“多式联运示范工程项目”。中心以“功能最全、服务最好、信誉最佳、管理最优、效率最高”为目标，融入区域经济、服务百姓消费、降低物流成本，竭诚为合作企业提供精品服务。
+              </p>
+            </div>
+          </div>
+          <div class="col-md-9 rightpart" >
+            <div class="titlepart">
+            </div>
+            <div id="image_list" class=" bodypart">
+              <div class="grid" style="display:none;">
+                <div class="i-row clearfix">
+                  <div class="i-col width-1-5">
+                    <a href="images/tdc1/i1.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i1.jpg"> </a>
+                  </div>
+                  <div class="i-col width-1-5">
+                    <a href="images/tdc1/i2.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i2.jpg"> </a>
+                  </div>
+                  <div class="i-col width-1-5">
+                    <a href="images/tdc1/i3.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i3.jpg"> </a>
+                  </div>
+                  <div class="i-col width-1-5">
+                    <a href="images/tdc1/i4.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i4.jpg"> </a>
+                  </div>
+                  <div class="i-col width-1-5">
+                    <a href="images/tdc1/i5.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i5.jpg"> </a>
+                  </div>
+                </div>
+                <div>
+                  <a href="images/tdc1/i6.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i6.jpg"> </a>
+                </div>
+              </div>
+              <div class="swiper swiper-container">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">	<img src="images/tdc1/i1.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i2.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i3.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i4.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i5.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i6.jpg">	</div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
+      <div class="content">
+        <div class="col-md-3 leftpart">
+          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
+            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+            <span>		视频 </span>
+          </a>
         </div>
 
-        <div class="main">
- 			<div class="main-content">
-
-			  <div class="row" id="wlsp">
-				<div class="col-md-3 leftpart">
-					<div class="titlepart">
-					   <h3>大连城市物流<br/>共同配送中心</h3>
-					   <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
-					</div>
-
-				   <div class=" bodypart">
-					   <p>
-						   位于大连市甘井子区华北路300号，占地面积13.3万平方米，包括2座常温库、1座低温库、1座超低温库、1座综合楼；两条铁路专用线通过月台与库房链接；配备24小时通行的常低温配送车辆28台及先进的装卸分拣设备100余台；配套综合办公、金融融资以及完善的物流管理信息系统。依托铁路优势开通了“大连—哈尔滨”“铁越号”冷链物流班列，打造“干线+城配”完整物流链条。与大连港合作申报，获批交通运输部首批“多式联运示范工程项目”。中心以“功能最全、服务最好、信誉最佳、管理最优、效率最高”为目标，融入区域经济、服务百姓消费、降低物流成本，竭诚为合作企业提供精品服务。
-
-					   </p>
-
-				   </div>
-
-				</div>
-				<div class="col-md-9 rightpart" >
-					<div class="titlepart">
-					</div>
-				   <div id="image_list" class=" bodypart">
-						<div class="grid" style="display:none;">
-						  <a href="images/sp_03.png" data-lightbox="lightbox" > <img  src="images/sp_03.png"> </a>
-						</div>
-						<div class="swiper swiper-container">
-							<div class="swiper-wrapper">
-							    <div class="swiper-slide">	<img src="./images/sp_03.png">	</div>
-							    <div class="swiper-slide">	<img src="./images/sp_03.png">	</div>
-							</div>
-						</div>
-				   </div>
-				</div>
-
-			  </div>
-			</div>
-	    </div>
-		<nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-		  <div class="content">
-               <div class="col-md-3 leftpart">
-			     <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-             <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-             <span>		视频 </span>
-				 </a>
-			  </div>
-
-              <div class="col-md-9 rightpart" >
-				<div class="pull-right">
-				<a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-				<a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-				<a class="play-audio-btn audio-off ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-off" aria-hidden="true"></span> </a>
-				<audio id="audio-js" autoplay="true" class="audio-js">
-          <source src="audios/male/tdc_1.mp3" type="audio/mpeg">
-        </audio>
-				</div>
-			  </div>
- 		  </div>
-		</nav>
+        <div class="col-md-9 rightpart" >
+          <div class="pull-right">
+            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
+            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
+            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+            <audio id="audio-js" autoplay="true" class="audio-js">
+              <source src="audios/male/tdc_1.mp3" type="audio/mpeg" />
+              <source src="audios/male/tdc_1.ogg" type="audio/ogg" />
+            </audio>
+          </div>
+        </div>
+      </div>
+    </nav>
 
 
-	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-	  <div class="modal-dialog" role="document">
-		<div class="modal-content">
-		  <div class="clearfix">
- 			<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		  </div>
- 		  <div class="modal-body">
-			<video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-			  <source src="Videos/sample.mp4" type="video/mp4">
-			</video>
-		  </div>
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="clearfix">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+          </div>
+          <div class="modal-body">
+            <video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
+              <source src="videos/sample.mp4" type="video/mp4"/>
+              <source src="videos/sample.webm" type="video/webm"/>
+            </video>
+          </div>
 
-		</div>
-	  </div>
-	</div>
-</div>
-    <script src="Scripts/jquery-1.9.1.min.js"></script>
-    <script src="Scripts/bootstrap.min.js"></script>
-    <script src="Scripts/jquery.jplayer.min.js"></script>
-    <script src="Scripts/swiper.jquery.min.js"></script>
-    <script src="Scripts/swiper.animate.min.js"></script>
-    <script src="Scripts/video.min.js"></script>
-    <script src="Scripts/lightbox.min.js"></script>
-    <script src="Scripts/app.js"></script>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <script src="Scripts/jquery-1.9.1.min.js"></script>
+  <script src="Scripts/bootstrap.min.js"></script>
+  <script src="Scripts/jquery.jplayer.min.js"></script>
+  <script src="Scripts/swiper.jquery.min.js"></script>
+  <script src="Scripts/swiper.animate.min.js"></script>
+  <script src="Scripts/video.min.js"></script>
+  <script src="Scripts/lightbox.min.js"></script>
+  <script src="Scripts/app.js"></script>
 </body>
 </html>
