--- a/tdc_3.html
+++ b/tdc_3.html
@@ -32,8 +32,9 @@
               <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
             </div>
             <div class=" bodypart">
-              <p>
-                位于大连市沙河口区中长街3号的沙河口城市配送中心，占地面积4万平方米，拥有常温仓储库5座、铁路专用线两条，主要经营矿泉水、粮油、服装等城市快消品的仓储配送业务。
+              <p class="desc typing-ani">
+                <span class="text">位于大连市沙河口区中长街3号的沙河口城市配送中心，占地面积4万平方米，拥有常温仓储库5座、铁路专用线两条，主要经营矿泉水、粮油、服装等城市快消品的仓储配送业务。</span>
+                </span>
               </p>
             </div>
           </div>
@@ -82,7 +83,6 @@
       </div>
     </nav>
 
-    
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
       <div class="modal-dialog" role="document">
@@ -92,19 +92,23 @@
           </div>
           <div class="modal-body">
             <video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-              <source src="Videos/sample.mp4" type="video/mp4"/>
+              <source src="videos/sample.mp4" type="video/mp4"/>
+              <source src="videos/sample.webm" type="video/webm"/>
             </video>
           </div>
-
         </div>
       </div>
     </div>
 
   </div>
-  <script src="Scripts/jquery-1.9.1.min.js"></script>
-  <script src="Scripts/bootstrap.min.js"></script>
-  <script src="Scripts/jquery.jplayer.min.js"></script>
-  <script src="Scripts/video.min.js"></script>
-  <script src="Scripts/app.js"></script>
+  <script src="scripts/jquery-1.9.1.min.js"></script>
+  <script src="scripts/bootstrap.min.js"></script>
+  <script src="scripts/jquery.jplayer.min.js"></script>
+  <script src="scripts/swiper.jquery.min.js"></script>
+  <script src="scripts/swiper.animate.min.js"></script>
+  <script src="scripts/video.min.js"></script>
+  <script src="scripts/lightbox.min.js"></script>
+  <script src="scripts/typing-animate.js"></script>
+  <script src="scripts/app.js"></script>
 </body>
 </html>
