--- a/1_1_tdc.html
+++ b/1_1_tdc.html
@@ -12,6 +12,11 @@
     <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+  <div id="preloader">
+    <div id="spinner_container">
+    <img id="spinner" src="images/lightbox/loading.gif" alt="" />
+    </div>
+  </div>
     <div class="page tdc">
         <div class="container">
 			<div class="logo"> <img src="./images/tdc_logo.png"> </div>
@@ -67,31 +72,16 @@
 	  </div>
 	</nav>
 
-	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-	  <div class="modal-dialog" role="document">
-		<div class="modal-content">
-		  <div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			<h4 class="modal-title" id="myModalLabel">Modal title</h4>
-		  </div>
-		  <div class="modal-body">
-			<video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-			  <source src="Videos/sample.mp4" type="video/mp4">
-			</video>
-		  </div>
-		  <div class="modal-footer">
-			<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-			<button type="button" class="btn btn-primary">Save changes</button>
-		  </div>
-		</div>
-	  </div>
-	</div>
+ 
 </div>
-    <script src="Scripts/jquery-1.9.1.min.js"></script>
-    <script src="Scripts/bootstrap.min.js"></script>
-    <script src="Scripts/jquery.jplayer.min.js"></script>
-    <script src="Scripts/video.min.js"></script>
-    <script src="Scripts/app.js"></script>
+  <script src="scripts/jquery-1.9.1.min.js"></script>
+  <script src="scripts/bootstrap.min.js"></script>
+  <script src="scripts/jquery.jplayer.min.js"></script>
+  <script src="scripts/swiper.jquery.min.js"></script>
+  <script src="scripts/swiper.animate.min.js"></script>
+  <script src="scripts/video.min.js"></script>
+  <script src="scripts/lightbox.min.js"></script>
+  <script src="scripts/typing-animate.js"></script>
+  <script src="scripts/app.js"></script>
 </body>
 </html>
