--- a/1_1_tss.html
+++ b/1_1_tss.html
@@ -61,41 +61,21 @@
 
 
     </div>
+    <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
+  	  <div class="container">
+  		<div class="row" >
+  			<div class="col-md-10"></div>
+              <div class="col-md-1">
+              <a class="back_btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回</a>
+               </div>
+               <div class="col-md-1">
+              <a class="back-home-btn ctl_btn" href="index.html"> 首页 </a>
+              </div>
+          </div>
+  	  </div>
+  	</nav>
 
-	<nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-	  <div class="container">
-		<div class="row" id="back1">
-			<div class="col-md-10"></div>
-            <div class="col-md-1">
-            <a class="back_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> <img src="./images/back_07.png"> </a>
-             </div>
-             <div class="col-md-1">
-            <a  href="index.html"> <img src="./images/back_09.png" > </a>
-            </div>
-        </div>
-	  </div>
-	</nav>
 
-	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-	  <div class="modal-dialog" role="document">
-		<div class="modal-content">
-		  <div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			<h4 class="modal-title" id="myModalLabel">Modal title</h4>
-		  </div>
-		  <div class="modal-body">
-			<video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-			  <source src="Videos/sample.mp4" type="video/mp4">
-			</video>
-		  </div>
-		  <div class="modal-footer">
-			<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-			<button type="button" class="btn btn-primary">Save changes</button>
-		  </div>
-		</div>
-	  </div>
-	</div>
 </div>
     <script src="Scripts/jquery-1.9.1.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
