--- a/tdc_1.html
+++ b/tdc_1.html
@@ -15,6 +15,12 @@
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+	<div id="preloader">
+		<div id="spinner_container">
+		<img id="spinner" src="images/lightbox/loading.gif" alt="" />
+		</div>
+	</div>
+
   <div class="page  tdc-detail">
     <div class="container">
       <div class="logo"> <img src="./images/tdc_logo.png"> </div>
@@ -37,7 +43,8 @@
 
             <div class=" bodypart">
               <p class="desc typing-ani">
-                <span class="text">位于大连市甘井子区华北路300号，占地面积13.3万平方米，包括2座常温库、1座低温库、1座超低温库、1座综合楼；两条铁路专用线通过月台与库房链接；配备24小时通行的常低温配送车辆28台及先进的装卸分拣设备100余台；配套综合办公、金融融资以及完善的物流管理信息系统。依托铁路优势开通了“大连—哈尔滨”“铁越号”冷链物流班列，打造“干线+城配”完整物流链条。与大连港合作申报，获批交通运输部首批“多式联运示范工程项目”。中心以“功能最全、服务最好、信誉最佳、管理最优、效率最高”为目标，融入区域经济、服务百姓消费、降低物流成本，竭诚为合作企业提供精品服务。</span>
+                <span class="text">位于大连市甘井子区华北路300号，占地面积13.3万平方米，包括2座常温库、1座低温库、1座超低温库、1座综合楼；两条铁路专用线通过月台与库房链接；配备24小时通行的常低温配送车辆28台及先进的装卸分拣设备100余台；配套综合办公、金融融资以及完善的物流管理信息系统。依托铁路优势开通了“大连—哈尔滨”“铁越号”冷链物流班列，打造“干线+城配”完整物流链条。与大连港合作申报，获批交通运输部首批“多式联运示范工程项目”。中心以“功能最全、服务最好、信誉最佳、管理最优、效率最高”为目标，融入区域经济、服务百姓消费、降低物流成本，竭诚为合作企业提供精品服务。
+                </span>
               </p>
             </div>
           </div>
@@ -106,8 +113,6 @@
         </div>
       </div>
     </nav>
-
-
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
       <div class="modal-dialog" role="document">
@@ -121,20 +126,19 @@
               <source src="videos/sample.webm" type="video/webm"/>
             </video>
           </div>
-
         </div>
       </div>
     </div>
 
   </div>
-  <script src="Scripts/jquery-1.9.1.min.js"></script>
-  <script src="Scripts/bootstrap.min.js"></script>
-  <script src="Scripts/jquery.jplayer.min.js"></script>
-  <script src="Scripts/swiper.jquery.min.js"></script>
-  <script src="Scripts/swiper.animate.min.js"></script>
-  <script src="Scripts/video.min.js"></script>
-  <script src="Scripts/lightbox.min.js"></script>
-  <script src="Scripts/typing-animate.js"></script>
-  <script src="Scripts/app.js"></script>
+  <script src="scripts/jquery-1.9.1.min.js"></script>
+  <script src="scripts/bootstrap.min.js"></script>
+  <script src="scripts/jquery.jplayer.min.js"></script>
+  <script src="scripts/swiper.jquery.min.js"></script>
+  <script src="scripts/swiper.animate.min.js"></script>
+  <script src="scripts/video.min.js"></script>
+  <script src="scripts/lightbox.min.js"></script>
+  <script src="scripts/typing-animate.js"></script>
+  <script src="scripts/app.js"></script>
 </body>
 </html>
