--- a/try_1.html
+++ b/try_1.html
@@ -1,113 +1,104 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CefSharp Example Start Page</title>
-    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>CefSharp Example Start Page</title>
+  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
+  <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
+  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div class="page  tdc-detail">
-        <div class="container">
-			<div class="logo"> <img src="./images/tdc_logo.png"> </div>
-			<div class="row" id="zlogo">
-				<div class="col-md-4"></div>
+  <div class="page  tdc-detail">
+    <div class="container">
+      <div class="logo"> <img src="./images/tdc_logo.png"> </div>
+      <div class="row" id="zlogo">
+        <div class="col-md-4"></div>
         <div class="col-md-4"><img src="./images/style/tre_head.png"></div>
-				<div class="col-md-4"></div>
-			</div>
+        <div class="col-md-4"></div>
+      </div>
+    </div>
+
+    <div class="main">
+      <div class="main-content">
+
+        <div class="row" id="wlsp">
+          <div class="col-md-3 leftpart">
+            <div class="titlepart">
+              <h3>大连地铁<br/>房地产</h3>
+              <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
+            </div>
+
+            <div class=" bodypart">
+              <p class="desc typing-ani">
+                <span class="text">大连铁路房地产开发有限责任公司2006年6月成立，位于大连市中山区延安路49号。公司注册资金990万元，经营范围包括房屋开发与销售、铁路工程及项目建设管理。公司致力于商品住宅、保障房的开发与建设，成功开发了地处商业黄金地段的“双兴财富长街”、大连西站龙畔锦城住宅小区、铁路站北职工保障性住房等一批住宅小区和大连胜利桥北街区改造工程。目前正在开发建设的项目包括港湾隽景、沈铁铭悦。公司年销售收入8.1亿元，多次获得铁路系统重合同、守信用企业荣誉称号。
+                </span>
+              </p>
+            </div>
+
+          </div>
+          <div class="col-md-9 rightpart" >
+            <div class="titlepart">
+            </div>
+            <div class=" bodypart">
+              <img src="./images/tlimg_03.png">
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
+      <div class="content">
+        <div class="col-md-3 leftpart">
+          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
+            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+            <span>		视频 </span>
+          </a>
         </div>
 
-        <div class="main">
- 			<div class="main-content">
+        <div class="col-md-9 rightpart" >
+          <div class="pull-right">
+            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
+            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
+            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+            <audio id="audio-js" autoplay="true" class="audio-js">
+              <source src="audios/male/tdc_1.mp3" type="audio/mpeg" />
+              <source src="audios/male/tdc_1.ogg" type="audio/ogg" />
+            </audio>
+          </div>
+        </div>
+      </div>
+    </nav>
 
-			<div class="row" id="wlsp">
-            <div class="col-md-3 leftpart">
-                <div class="titlepart">
-				   <h3>大连地铁<br/>房地产</h3>
-				   <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
-				</div>
-
-               <div class=" bodypart">
-                   <p>
-                       大连铁路房地产开发有限责任公司2006年6月成立，位于大连市中山区延安路49号。公司注册资金990万元，经营范围包括房屋开发与销售、铁路工程及项目建设管理。公司致力于商品住宅、保障房的开发与建设，成功开发了地处商业黄金地段的“双兴财富长街”、大连西站龙畔锦城住宅小区、铁路站北职工保障性住房等一批住宅小区和大连胜利桥北街区改造工程。目前正在开发建设的项目包括港湾隽景、沈铁铭悦。公司年销售收入8.1亿元，多次获得铁路系统重合同、守信用企业荣誉称号。
-
-                   </p>
-                   <div class="col-md-3 leftpart" style="height: 80px;    height: 80px;width: 100%!important;position: relative;padding: 0px;">
-			     <a class="play-video-btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-                 <img src="./images/sp_07.png">
-				 </a>
-			 	 </div>
-               </div>
-
-            </div>
-             <div class="col-md-9 rightpart" >
-                <div class="titlepart">
-				</div>
-               <div class=" bodypart">
-               <img src="./images/tlimg_03.png">
-			   </div>
-            </div>
-
-
-           <!--  <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
- 弹出视频 </button>
-
-           <button type="button" class="btn btn-primary btn-lg" >
-
- 播放音频 </button>
-			<audio src="Audios/sample.mp3" >您的浏览器不支持 audio 标签。</audio> -->
-
-
-
-
-
-			</div>
-			</div>
-	    </div>
-		<nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-		  <div class="content">
-               <!-- <div class="col-md-3 leftpart">
-			     <a class="play-video-btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-				 </a>
-			  </div> -->
-
-              <div class="col-md-9 rightpart" >
-
-				<a class="back-btn " href="javascript:void(0)" onclick="javascript:window.history.back();"> </a>
-				<a class="back-home-btn" href="index.html">   </a>
-				<a class="play-audio-btn audio-off" href="javascript:void(0)"></a>
-				<audio id="audio-js" src="Audios/sample.mp3" class="audio-js">您的浏览器不支持 audio 标签。</audio>
-			  </div>
- 		  </div>
-		</nav>
-
-
-	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-	  <div class="modal-dialog" role="document">
-		<div class="modal-content">
-		  <div class="clearfix">
- 			<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		  </div>
- 		  <div class="modal-body">
-			<video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-			  <source src="Videos/sample.mp4" type="video/mp4">
-			</video>
-		  </div>
-
-		</div>
-	  </div>
-	</div>
-</div>
-    <script src="Scripts/jquery-1.9.1.min.js"></script>
-    <script src="Scripts/bootstrap.min.js"></script>
-    <script src="Scripts/jquery.jplayer.min.js"></script>
-    <script src="Scripts/video.min.js"></script>
-    <script src="Scripts/app.js"></script>
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="clearfix">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+          </div>
+          <div class="modal-body">
+            <video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
+              <source src="videos/sample.mp4" type="video/mp4"/>
+              <source src="videos/sample.webm" type="video/webm"/>
+            </video>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="scripts/jquery-1.9.1.min.js"></script>
+  <script src="scripts/bootstrap.min.js"></script>
+  <script src="scripts/jquery.jplayer.min.js"></script>
+  <script src="scripts/swiper.jquery.min.js"></script>
+  <script src="scripts/swiper.animate.min.js"></script>
+  <script src="scripts/video.min.js"></script>
+  <script src="scripts/lightbox.min.js"></script>
+  <script src="scripts/typing-animate.js"></script>
+  <script src="scripts/app.js"></script>
 </body>
 </html>
