--- a/1_1_tdc.html
+++ b/1_1_tdc.html
@@ -38,7 +38,7 @@
 					<a href="tdc_3.html" class="image-wrapper " > <div class="waik"><img src="./images/tdc/tdc_i2.jpg"></div><p>沙河口城市配送中心</p> </a>
 					</div>
 					<div class="flex-item">
-					<a href="tdc_4.html" class="image-wrapper" ><div class="waik"> <img src="./images/tdc/tdc_i3.jpg"></div><p>金桥推拉库 </p></a>
+					<a href="tdc_4.html" class="image-wrapper" ><div class="waik"> <img src="./images/tdc/tdc_i3.jpg"></div><p>金桥物流基地 </p></a>
 					</div>
 				</div>
 				<div class="flex-box half-height">
@@ -72,7 +72,7 @@
 	  </div>
 	</nav>
 
- 
+
 </div>
   <script src="scripts/jquery-1.9.1.min.js"></script>
   <script src="scripts/bootstrap.min.js"></script>
