--- a/1_profile.html
+++ b/1_profile.html
@@ -100,23 +100,22 @@
  		  </div>
 		</nav>
 
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="clearfix">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+        </div>
+        <div class="modal-body">
+          <video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
+            <source src="videos/profile.webm" type="video/webm"/>
+          </video>
+        </div>
+      </div>
+    </div>
+  </div>
 
-	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-	  <div class="modal-dialog" role="document">
-		<div class="modal-content">
-		  <div class="clearfix">
- 			<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		  </div>
- 		  <div class="modal-body">
-			<video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-			  <source src="Videos/sample.mp4" type="video/mp4">
-			</video>
-		  </div>
-
-		</div>
-	  </div>
-	</div>
 </div>
     <script src="Scripts/jquery-1.9.1.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
