--- a/profile_1.html
+++ b/profile_1.html
@@ -70,8 +70,7 @@
             </div>
             <div class="modal-body">
               <video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-                <source src="videos/sample.mp4" type="video/mp4"/>
-                <source src="videos/sample.webm" type="video/webm"/>
+                <source src="videos/profile.webm" type="video/webm"/>
               </video>
             </div>
           </div>
