--- a/tdc_1.html
+++ b/tdc_1.html
@@ -122,7 +122,7 @@
           </div>
           <div class="modal-body">
             <video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-              <source src="videos/sample.webm" type="video/webm"/>
+              <source src="videos/tdc_1.webm" type="video/webm"/>
             </video>
           </div>
         </div>
