--- a/try_2.html
+++ b/try_2.html
@@ -5,9 +5,12 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CefSharp Example Start Page</title>
+  <title>锦州锦铁房地产</title>
   <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
+  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
+  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
@@ -42,11 +45,23 @@
           <div class="col-md-9 rightpart" >
             <div class="titlepart">
             </div>
-            <div class=" bodypart">
-              <img src="./images/xtlimg_03.png" class="xtl">
-              <img src="./images/xtlimg_05.png" class="xtl">
-              <img src="./images/xtlimg_10.png" class="xtl">
-              <img src="./images/xtlimg_12.png" class="xtl">
+            <div id="image_list" class=" bodypart">
+              <div class="grid" style="display:none;">
+                <a href="images/try2/xtlimg_03.png" data-lightbox="lightbox" > <img src="./images/try2/xtlimg_03.png" class="xtl"></a>
+                <a href="images/try2/xtlimg_05.png" data-lightbox="lightbox" > <img src="./images/try2/xtlimg_05.png" class="xtl"></a>
+                <a href="images/try2/xtlimg_10.png" data-lightbox="lightbox" > <img src="./images/try2/xtlimg_10.png" class="xtl"></a>
+                <a href="images/try2/xtlimg_12.png" data-lightbox="lightbox" > <img src="./images/try2/xtlimg_12.png" class="xtl"></a>
+              </div>
+
+              <div class="swiper swiper-container">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">	<img src="images/try2/i1.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/try2/i2.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/try2/i3.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/try2/i4.jpg">	</div>
+                </div>
+              </div>
+
             </div>
           </div>
 
