--- a/try_1.html
+++ b/try_1.html
@@ -5,9 +5,12 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CefSharp Example Start Page</title>
+  <title>大连地铁房地产</title>
   <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
+  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
+  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
@@ -43,9 +46,21 @@
           <div class="col-md-9 rightpart" >
             <div class="titlepart">
             </div>
-            <div class=" bodypart">
-              <img src="./images/tlimg_03.png">
+            <div id="image_list" class=" bodypart">
+              <div class="grid" style="display:none;">
+                <img src="./images/tlimg_03.png">
+              </div>
+              <div class="swiper swiper-container">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">	<img src="images/try1/i1.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/try1/i2.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/try1/i3.jpg">	</div>
+
+                </div>
+              </div>
+
             </div>
+
           </div>
 
         </div>
