--- a/tss_6.html
+++ b/tss_6.html
@@ -90,8 +90,7 @@
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
             <audio id="audio-js" autoplay="true" class="audio-js">
-              <source src="audios/male/tdc_1.mp3" type="audio/mpeg" />
-              <source src="audios/male/tdc_1.ogg" type="audio/ogg" />
+              <source src="audios/tss6.ogg" type="audio/ogg" />
             </audio>
           </div>
         </div>
