添加铁越文化页面

--- a/1_culture.html
+++ b/1_culture.html
@@ -1,149 +1,63 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>大连城市物流共同配送中心</title>
+    <title>CefSharp Example Start Page</title>
     <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
     <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
     <link href="Styles/app.css" rel="stylesheet" type="text/css" />
-</head>
+  </head>
 <body>
-    <div class="page  tdc-detail">
-        <div class="container">
-			<div class="logo"> <img src="./images/tdc_logo.png"> </div>
-			<div class="row" id="zlogo">
-				<div class="col-md-4"></div>
-				<div class="col-md-4"><img src="./images/timg_03.png"></div>
-				<div class="col-md-4"></div>
-			</div>
+  <div id="preloader">
+    <div id="spinner_container">
+    <img id="spinner" src="images/lightbox/loading.gif" alt="" />
+    </div>
+  </div>
+
+  <div class="page">
+    <div class="container">
+        <div class="row">
+             <div class="col-md-3"> </div>
+             <div class="col-md-6"><img src="./images/culture/culture_03.png" class="biao"></div>
+             <div class="col-md-3"> </div>
+
+         </div>
+
+        <div class="row" id="fenlei">
+          <div class="col-md-3">
+            <a href="culture_1.html" class="profile_btn1 ">  </a>
+          </div>
+
+            <div class="col-md-3">
+              <a href="culture_2.html" class="business_btn1">  </a>
+            </div>
+            <div class="col-md-3">
+              <a href="culture_3.html" class="culture_btn1">  </a>
+            </div>
+            <div class="col-md-3">
+              <a href="culture_4.html" class="party_btn1"> </a>
+            </div>
         </div>
 
-        <div class="main">
- 			<div class="main-content">
+        <!-- <div>
+            <a href="index.html"> 首页 </a>
+            <a class="back_btn" onclick="javascript:window.history.back();"> 返回 </a>
 
-			  <div class="row" id="wlsp">
-				<div class="col-md-3 leftpart">
-					<div class="titlepart">
-					   <h3>大集团简介</h3>
-					   <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
-					</div>
+        </div> -->
 
-				   <div class=" bodypart">
-					   <p>
-						  大连铁越集团成立于2005年，是沈阳铁路局下属的跨行业、多领域、区域性集团公司。集团注册资金1.3亿元，资产总额60多亿元，下属17个分子公司，是中国铁路第一家A股上市公司“铁龙物流”的第二大股东。集团通过了国家ISO9001-2000质量体系认证, 是中国物流与采购联合会“AAAA级”综合型物流企业、中物联冷链副理事长单位、大连市物流协会副会长单位、辽宁省“现代物流示范企业”、辽宁省“文明单位”。
-						<img src="./images/gkimg_21.png" class="wzimg">
-					   </p>
-
-				   </div>
-
-				</div>
-
-				<div class="col-md-9 rightpart" >
-
-					<div class="div7">
-					<div class="titlepart" style="width:30%;margin-left:3%">
-					 <h3>大集团简介</h3>
-					 <img src="./images/tiao_03.png" >
-					</div>
-					<div>
-						<img src="./images/gkimg_03.png" class="imgdd">
-						<img src="./images/gkimg_09.png" class="imgdd">
-						<img src="./images/gkimg_12.png" class="imgdd">
-					</div>
-					<div style="width:80%;height:1px;background:#fff;margin:60px  0 0 40px;"></div>
-					<div class="titlepart" style="width:45%;margin-left:3%;position: relative;top:30px;">
-					 <h3>大集团简介</h3>
-					 <img src="./images/tiao_03.png" >
-					</div>
-					<div>
-						<img src="./images/gkimg_24.png" class="imgdd1">
-						<img src="./images/gkimg_26.png" class="imgdd1">
-						<img src="./images/gkimg_28.png" class="imgdd1">
-					</div>
-
-
-
-					<!-- <div style="width:80%;height:1px;background:#fff;margin:50px;"></div>
-					<div class="titlepart" style="width:30%;top: 65%;margin-left:3%">
-					 <h3>大集团简介</h3>
-					 <img src="./images/tiao_03.png">
-					</div>
-					<div>
-						<img src="./images/gkimg_24.png" class="imgdd">
-						<img src="./images/gkimg_26.png" class="imgdd">
-						<img src="./images/gkimg_28.png" class="imgdd">
-					</div>
-					</div>
-					<div class="div3">
-						<img src="./images/gkimg_06.png" class="div3img">
-						<img src="./images/gkimg_17.png" class="div3img">
-					</div> -->
-
-				</div>
-				<div class="div3">
-						<a href="culture_1.html"><img src="./images/gkimg_06.png" class="div3img"></a>
-						<a href="culture_2.html"><img src="./images/gkimg_17.png" class="div3img"></a>
-					</div>
-
-
-
-			  </div>
-			</div>
-	    </div>
-		<nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-		  <div class="content">
-               <div class="col-md-3 leftpart">
-			     <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-             <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-             <span>		视频 </span>
-				 </a>
-			  </div>
-
-              <div class="col-md-9 rightpart" >
-				<div class="pull-right">
-				<a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-				<a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-				<a class="play-audio-btn audio-off ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-off" aria-hidden="true"></span> </a>
-				<audio id="audio-js" autoplay="true" class="audio-js">
-          <source src="audios/male/tdc_1.mp3" type="audio/mpeg">
-        </audio>
-				</div>
-			  </div>
- 		  </div>
-		</nav>
-
-
-	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-	  <div class="modal-dialog" role="document">
-		<div class="modal-content">
-		  <div class="clearfix">
- 			<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		  </div>
- 		  <div class="modal-body">
-			<video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-        <source src="videos/sample.webm" type="video/webm"/>
-			</video>
-		  </div>
-
-		</div>
-	  </div>
-	</div>
-</div>
-    <script src="Scripts/jquery-1.9.1.min.js"></script>
-    <script src="Scripts/bootstrap.min.js"></script>
-    <script src="Scripts/jquery.jplayer.min.js"></script>
-    <script src="Scripts/swiper.jquery.min.js"></script>
-    <script src="Scripts/swiper.animate.min.js"></script>
-    <script src="Scripts/video.min.js"></script>
-    <script src="Scripts/lightbox.min.js"></script>
-    <script src="Scripts/app.js"></script>
+    </div>
+  </div>
+  <script src="scripts/jquery-1.9.1.min.js"></script>
+  <script src="scripts/bootstrap.min.js"></script>
+  <script src="scripts/jquery.jplayer.min.js"></script>
+  <script src="scripts/swiper.jquery.min.js"></script>
+  <script src="scripts/swiper.animate.min.js"></script>
+  <script src="scripts/video.min.js"></script>
+  <script src="scripts/lightbox.min.js"></script>
+  <script src="scripts/typing-animate.js"></script>
+  <script src="scripts/app.js"></script>
 </body>
 </html>
