--- a/tss_12.html
+++ b/tss_12.html
@@ -48,11 +48,22 @@
 
             </div>
             <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none;">
-                <a href="images/tss12/img12_03.png" data-lightbox="lightbox" ><img src="./images/tss12/img12_03.png" class="zimg1" style="height: 80%;"></a>
-                <div class="zimg2" style="height:80%">
-                  <a href="images/tss12/img12_05.png" data-lightbox="lightbox" ><img src="./images/tss12/img12_05.png" class="amg1"></a>
-                  <a href="images/tss12/img12_08.png" data-lightbox="lightbox" ><img src="./images/tss12/img12_08.png" class="amg2"></a>
+              <div class="grid" style="display:none; height:100%;">
+                <div class="col-3max-left" style="">
+                    <a href="images/tss12/img12_03.png" data-lightbox="lightbox" ><img src="./images/tss12/img12_03.png" class="" style="width:100%; height: 100%;"></a>
+                </div>
+                <div class="col-3max-right" style="">
+                  <div class="col-2n-3max-right">
+                    <a href="images/tss12/img12_08.png" data-lightbox="lightbox" ><img src="./images/tss12/img12_08.png" class="" style="width:100%; height: 100%;"></a>
+                  </div>
+                  <div class="col-3n-3max-right">
+                    <a href="images/tss12/img12_05.png" data-lightbox="lightbox" ><img src="./images/tss12/img12_05.png" class="" style="width:100%; height: 100%;"></a>
+                  </div>
+                </div>
+                <!--<a href="images/tss12/img12_03.png" data-lightbox="lightbox" ><img src="./images/tss12/img12_03.png" class="zimg1" style="height: 80%;"></a>-->
+                <!--<div class="zimg2" style="height:80%">-->
+                  <!--<a href="images/tss12/img12_05.png" data-lightbox="lightbox" ><img src="./images/tss12/img12_05.png" class="amg1"></a>-->
+                  <!--<a href="images/tss12/img12_08.png" data-lightbox="lightbox" ><img src="./images/tss12/img12_08.png" class="amg2"></a>-->
                 </div>
               </div>
 
