--- a/tss_layout_12.html
+++ b/tss_layout_12.html
@@ -36,7 +36,8 @@
             </div>
             <div class=" bodypart">
               <p class="desc typing-ani">
-                <span class="text">集团旗下的出租车公司拥有出租汽车118台，是大连市出租车行业中的明星企业。
+                <span class="text">
+				集团旗下的出租车公司拥有出租汽车118台，是大连市出租车行业中的明星企业。
                 </span>
               </p>
             </div>
@@ -44,20 +45,31 @@
           </div>
           <div class="col-md-9 rightpart" >
             <div class="titlepart">
-
-
             </div>
             <div id="image_list" class=" bodypart">
               <div class="grid" style="display:none; height:100%;">
-                <div style="width:50%;background-color:red;height:100%; float:left;">
-<a href="images/tss11/img11_03.png" data-lightbox="lightbox" ><img src="./images/tss11/img11_03.png" class="" style="height: 100%;"></a>
+                <div class="col-1-2-left" style="">
+                    <a href="images/tss11/img11_06.png" data-lightbox="lightbox" ><img src="./images/tss11/img11_06.png" class="" style="width: 100%; height: 100%;"></a>
                 </div>
-                <div class="" style="width:50%;background-color:yellow;height:100%;float:right;padding: 0 0 0 20px;">
-                  <div style="height:50%; padding: 0 0 10px 0; background-color:gray;">
-                    <div style="height:100%;background-color:green;"> </div>
+
+                <div class="col-1-2-right" style="">
+                  <div class="lin-1-2-top" style="">
+                    <div class="col-1-2-left" style="">
+                    <!--<div class="top01left" style="width:50%; height:100%; float:left;  padding-right: 10px; overflow: hidden;">-->
+                      <a href="images/tss11/img11_03.png" data-lightbox="lightbox" ><img src="./images/tss11/img11_03.png" class="" style="width: 100%;  height: 100%"></a>
+                    </div>
+                    <div  class="col-1-2-right" style="">
+                      <a href="images/tss11/img11_03.png" data-lightbox="lightbox" ><img src="./images/tss11/img11_03.png"class="" style="width: 100%;  height: 100%"></a>
+                    </div>
                   </div>
-                  <div style="height:50%; padding: 10px 0 0 0; background-color:silver;">
-                   <div style="height:100%;background-color:green;"> </div>
+
+                  <div class="lin-1-2-foot" style="">
+                    <div class="col-1-2-left" style="">
+                      <a href="images/tss11/img11_03.png" data-lightbox="lightbox" ><img src="./images/tss11/img11_03.png" class="" style="width: 100%;  height: 100%"></a>
+                    </div>
+                    <div  class="col-1-2-right" style="">
+                      <a href="images/tss11/img11_03.png" data-lightbox="lightbox" ><img src="./images/tss11/img11_03.png" class="" style="width: 100%;  height: 100%"></a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -67,6 +79,7 @@
                   <div class="swiper-slide">	<img src="images/tss11/img11_03.png">	</div>
                   <div class="swiper-slide">	<img src="images/tss11/img11_06.png">	</div>
                   <div class="swiper-slide">	<img src="images/tss11/img11_09.png">	</div>
+				  <div class="swiper-slide">	<img src="images/tss11/img11_09.png">	</div>
                 </div>
               </div>
 
