--- a/tss_5.html
+++ b/tss_5.html
@@ -36,7 +36,8 @@
             </div>
             <div class=" bodypart">
               <p class="desc typing-ani">
-                <span class="text">位于中山区11号，面积12945平方米，拥有设计时尚的各款客房202间，设有能容纳150人同时就餐的中餐厅和7个风格迥异餐饮包间。同时还设有可容纳100人的大会议室2个，可容纳50人、20人的小会议室各1个。
+                <span class="text">
+				位于中山区11号，面积12945平方米，拥有设计时尚的各款客房202间，设有能容纳150人同时就餐的中餐厅和7个风格迥异餐饮包间。同时还设有可容纳100人的大会议室2个，可容纳50人、20人的小会议室各1个。
                 </span>
               </p>
             </div>
@@ -48,18 +49,61 @@
 
             </div>
             <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none;">
+              <div class="grid" style="display:none; height:100%;">
+                <div class="col-8max-left" style="">
+                    <a href="images/tss5/i1.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i1.jpg" class="" style="width: 100%; height: 100%;"></a>
+                </div>
 
-                <a href="images/tss5/i2.jpg" data-lightbox="lightbox" > <img src="./images/tss5/i2_s.png" class="jjimg1" > </a>
-                <div class="jjimg2" style="height:80%">
-                  <a href="images/tss5/i1.jpg" data-lightbox="lightbox" > <img src="./images/tss5/i1_s.png" class="ddimg"> </a>
+                <div class="col-8max-right" style="">
+
+                  <div class="col-lin1-8max-right" style="">
+                      <a href="images/tss5/i2.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i2.jpg" class="" style="width: 100%;  height: 100%"></a>
+                  </div>
+
+                  <div class="col-lin2-8max-right" style="width:100%; height:25%; float:left; padding:0 0 10px 0; overflow: hidden;">
+                    <div style="width:50%; height:100%; float: left">
+                      <a href="images/tss5/i2_s.png" data-lightbox="lightbox" ><img src="./images/tss5/i2_s.png" class="" style="width: 100%;  height: 100%; padding:0 5px 0 0;"></a>
+                    </div>
+                    <div style="width:50%; height:100%; float: right">
+                      <a href="images/tss5/i2_s.png" data-lightbox="lightbox" ><img src="./images/tss5/i2_s.png" class="" style="width: 100%;  height: 100%; padding:0 0 0 5px;"></a>
+                    </div>
+                  </div>
+
+                  <div class="col-lin3-8max-right" style="width:100%; height:25%; float:left; padding:0 0 10px 0; overflow: hidden;">
+                    <div style="width:50%; height:100%; float: left">
+                      <a href="images/tss5/i2_s.png" data-lightbox="lightbox" ><img src="./images/tss5/i2_s.png" class="" style="width: 100%;  height: 100%; padding:0 5px 0 0;"></a>
+                    </div>
+                    <div style="width:50%; height:100%; float: right">
+                      <a href="images/tss5/i2_s.png" data-lightbox="lightbox" ><img src="./images/tss5/i2_s.png" class="" style="width: 100%;  height: 100%; padding:0 0 0 5px;"></a>
+                    </div>
+                  </div>
+
+                  <div class="col-lin4-8max-right" style="width:100%; height:25%; float:left; overflow: hidden;">
+                    <div style="width:50%; height:100%; float: left">
+                      <a href="images/tss5/i2_s.png" data-lightbox="lightbox" ><img src="./images/tss5/i2_s.png" class="" style="width: 100%;  height: 100%; padding:0 5px 0 0;"></a>
+                    </div>
+                    <div style="width:50%; height:100%; float: right">
+                      <a href="images/tss5/i2_s.png" data-lightbox="lightbox" ><img src="./images/tss5/i2_s.png" class="" style="width: 100%;  height: 100%; padding:0 0 0 5px;"></a>
+                    </div>
+                  </div>
+
+                  <!--<div class="lin-1-2-foot" style="">-->
+                    <!--<div class="col-1-2-left" style="">-->
+                      <!--<a href="images/tss5/img11_03.png" data-lightbox="lightbox" ><img src="./images/tss5/img11_03.png" class="" style="width: 100%;  height: 100%"></a>-->
+                    <!--</div>-->
+                    <!--<div  class="col-1-2-right" style="">-->
+                      <!--<a href="images/tss5/img11_03.png" data-lightbox="lightbox" ><img src="./images/tss5/img11_03.png" class="" style="width: 100%;  height: 100%"></a>-->
+                    <!--</div>-->
+                  <!--</div>-->
                 </div>
               </div>
 
               <div class="swiper swiper-container">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/tss5/i1.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss5/i2.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss5/img11_03.png">	</div>
+                  <div class="swiper-slide">	<img src="images/tss5/img11_06.png">	</div>
+                  <div class="swiper-slide">	<img src="images/tss5/img11_09.png">	</div>
+				  <div class="swiper-slide">	<img src="images/tss5/img11_09.png">	</div>
                 </div>
               </div>
             </div>
@@ -83,7 +127,8 @@
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
             <audio id="audio-js" autoplay="true" class="audio-js">
-              <source src="audios/tss5.ogg" type="audio/ogg" />
+              <source src="audios/male/tdc_1.mp3" type="audio/mpeg" />
+              <source src="audios/male/tdc_1.ogg" type="audio/ogg" />
             </audio>
           </div>
         </div>
@@ -94,26 +139,32 @@
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
-          <div class="clearfix">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
           </div>
           <div class="modal-body">
             <video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
+              <source src="videos/sample.mp4" type="video/mp4"/>
               <source src="videos/sample.webm" type="video/webm"/>
-            </video>
+              </video>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <script src="scripts/jquery-1.9.1.min.js"></script>
-  <script src="scripts/bootstrap.min.js"></script>
-  <script src="scripts/jquery.jplayer.min.js"></script>
-  <script src="scripts/swiper.jquery.min.js"></script>
-  <script src="scripts/swiper.animate.min.js"></script>
-  <script src="scripts/video.min.js"></script>
-  <script src="scripts/lightbox.min.js"></script>
-  <script src="scripts/typing-animate.js"></script>
-  <script src="scripts/app.js"></script>
-</body>
-</html>
+    <script src="scripts/jquery-1.9.1.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
+    <script src="scripts/jquery.jplayer.min.js"></script>
+    <script src="scripts/swiper.jquery.min.js"></script>
+    <script src="scripts/swiper.animate.min.js"></script>
+    <script src="scripts/video.min.js"></script>
+    <script src="scripts/lightbox.min.js"></script>
+    <script src="scripts/typing-animate.js"></script>
+    <script src="scripts/app.js"></script>
+  </body>
+  </html>
